# VUTProjects

IAL_1/: README.md  c201.c  c203.c  c206.c
IDS/: README.md  er_diagram.drawio
IFJ/: README.md
IMS/: README.md  ims-projekt.cpp
INC/: README.md  uart_rx.vhd  uart_rx_fsm.vhd
INP_2/: README.md  xsocha03.s
IPP/projekt_1/: README.md  parse.py
ISA/: Makefile  README.md  dns.cpp  dns.hpp  test_script.py
ITU/: README.md  game_logic.py  main.py
ITW/projekt_2/: README.md  home.js  index.html  nav.js  styles.css
IVS_2/: README  README.md
IVS_2/install/: InstallercalcIVS.run.md5  calcIVS.deb.md5
IVS_2/plan/: xkonde05_xniesl00_xrepin00_xsocha03_plan.txt
IVS_2/src/: CMakeLists.txt  Doxyfile  Makefile  calc_console.cpp  mlib_test.cpp  stddev.cpp
IVS_2/src/calcIVS/: Makefile  calcIVS  calcIVS.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
IVS_2/src/mlib/: CMakeLists.txt  mlib.h  mlib_basic.cpp  mlib_eval.cpp  mlib_internal.h
IZP_1/: README.md  pwcheck.c
IZU_1/: README.md
IZV/: README.md
IZV/izv-part01/: part01.py
IZV/izv-part02/: analysis.py
